--- a/Day2/Day_2.ipynb
+++ b/Day2/Day_2.ipynb
@@ -291,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "ff28e433",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Portal:\n",
+    "class ppt:\n",
     "    def __init__(self):\n",
-    "        self._name = ''\n",
+    "        self._name = str()\n",
     "\n",
     "    @property\n",
     "    def name(self):\n",
@@ -315,12 +315,12 @@
     "        print('Deleter Method')\n",
     "        del self._name\n",
     "\n",
-    "p = Portal()"
+    "p = ppt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "484e70bd",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "f3135c5b",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76826f5a",
    "metadata": {},
    "outputs": [
@@ -422,18 +422,9 @@
      "output_type": "stream",
      "text": [
       "None\n",
+      "gfg\n",
+      "1\n",
       "gfg\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Can't instantiate abstract class C with abstract methods show",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mshow\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgfg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 25\u001b[0m c \u001b[38;5;241m=\u001b[39m \u001b[43mC\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m d \u001b[38;5;241m=\u001b[39m D()\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(c\u001b[38;5;241m.\u001b[39mshow())\n",
-      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class C with abstract methods show"
      ]
     }
    ],
@@ -457,15 +448,19 @@
     "    @abstractmethod\n",
     "    def show(self):\n",
     "        pass\n",
+    "    def get(self):\n",
+    "        return 1\n",
     "\n",
     "class D(C):\n",
     "    def show(self):\n",
     "        return 'gfg'\n",
     "    \n",
-    "c = C()\n",
+    "# c = C()\n",
     "d = D()\n",
-    "print(c.show())\n",
+    "# print(c.get())\n",
+    "# print(c.show())\n",
     "\n",
+    "print(d.get())\n",
     "print(d.show())"
    ]
   },
@@ -473,6 +468,96 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24e44c94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "foo\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MyClass' object has no attribute 'method3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mmethod1(\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mmethod2())\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmethod3\u001b[49m())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MyClass' object has no attribute 'method3'"
+     ]
+    }
+   ],
+   "source": [
+    "import zope.interface\n",
+    "\n",
+    "\n",
+    "class MyInterface(zope.interface.Interface):\n",
+    "    x = zope.interface.Attribute(\"foo\")\n",
+    "    def method1(self, x):\n",
+    "        pass\n",
+    "    def method2(self):\n",
+    "        pass\n",
+    "    def method3(self):\n",
+    "        return 'Nothing'\n",
+    "\n",
+    "\n",
+    "@zope.interface.implementer(MyInterface)\n",
+    "class MyClass:\n",
+    "    def method1(self, x):\n",
+    "        return x**2\n",
+    "    def method2(self):\n",
+    "        return \"foo\"\n",
+    "    \n",
+    "m = MyClass()\n",
+    "print(m.method1(1))\n",
+    "print(m.method2())\n",
+    "print(m.method3())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3ef3d5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "gfg\n"
+     ]
+    }
+   ],
+   "source": [
+    "class C(ABC):\n",
+    "    @abstractmethod\n",
+    "    def show(self):\n",
+    "        print('hello')\n",
+    "        return 5\n",
+    "    def get(self):\n",
+    "        return 1\n",
+    "\n",
+    "class D(C):\n",
+    "    def show(self):\n",
+    "        return 'gfg'\n",
+    "    \n",
+    "# c = C()\n",
+    "d = D()\n",
+    "# print(c.get())\n",
+    "# print(c.show())\n",
+    "\n",
+    "print(d.get())\n",
+    "print(d.show())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9740a284",
    "metadata": {},
    "outputs": [],
    "source": []
