--- a/Day2/inheritance_and_polymorphism.ipynb
+++ b/Day2/inheritance_and_polymorphism.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2cbe891d",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is age greater than 18 : False\n",
       "Is age greater than 18 : True\n"
      ]
     }
@@ -577,8 +576,8 @@
     "    def isAdult(age):\n",
     "        return f'Is age greater than 18 : {age>18}'\n",
     "\n",
-    "obj = Person('A', 24)\n",
-    "print(obj.isAdult(12))\n",
+    "# obj = Person('A', 24)\n",
+    "# print(obj.isAdult(12))\n",
     "\n",
     "# call without object\n",
     "print(Person.isAdult(34))\n",
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "id": "09bb7158",
    "metadata": {},
    "outputs": [
@@ -628,6 +627,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "082730d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abc'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func():\n",
+    "        \"\"\"abc\"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e895c9b5",
    "metadata": {},
    "outputs": [],
    "source": []
