--- a/Day7/ETL-Pipeline/ETL-Pipeline.ipynb
+++ b/Day7/ETL-Pipeline/ETL-Pipeline.ipynb
@@ -67,6 +67,16 @@
    "cell_type": "markdown",
    "id": "02dd947e",
    "metadata": {},
+   "source": [
+    "#### Data Source\n",
+    "In this project, we query the Adzuna API to extract job listings specifically related to Data Engineer roles in Canada. The API is configured to get job posts in Canada that mention data engineer in the job title or description. Additionally, we limit the results to job listings posted within the last two days.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5f2bd7",
+   "metadata": {},
    "source": []
   }
  ],
